--- a/views/default/board.html
+++ b/views/default/board.html
@@ -78,11 +78,11 @@
             <p id="nothingfound">{{=T("No name match your search!")}}</p>
             <div id="expand_close_btns">
                 <button class="btn btn-nostyle expand_all_stories pull-left" alt='{{=T("Open Stories")}}' title='{{=T("Open Stories")}}'>
-                    {{=T("Open Stories")}}
+                    {{=T("Open")}} {{=T("Stories")}}
                     <i class="icon-circle-arrow-down"></i>
                 </button>
                 <button class="btn btn-nostyle close_all_stories pull-left" alt='{{=T("Close Stories")}}' title='{{=T("Close Stories")}}'>
-                    {{=T("Close Stories")}}
+                    {{=T("Close")}} {{=T("Stories")}}
                     <i class="icon-circle-arrow-up"></i>
                 </button>
                 <div class="clearfix"></div>
