--- a/views/default/sprints.html
+++ b/views/default/sprints.html
@@ -48,19 +48,20 @@
 
 <div class="container-fluid">
     {{for sprint in sprints:}}
-    <div class="widget-box sprint_container">
-        <div class="widget-title sprint_header">
+    <div class="sprint_container">
+        <div class="sprint_header">
             <div class="pull-left">
-                <h5>{{=sprint.name}} - {{=T('Started in')}}: {{=g_blank_fulldate_check(sprint.started)}} - {{=T('Closed')}}: {{=g_blank_fulldate_check(sprint.ended)}}</h5>
+                <h5>{{=sprint.name}} - <span>{{=T('Started in')}}: {{=g_blank_fulldate_check(sprint.started)}}</span> - <span>{{=T('Closed')}}: {{=g_blank_fulldate_check(sprint.ended)}}</span></h5>
             </div>
             <div class="pull-right">
                 <button class="btn btn-nostyle expand_sprint pull-right" alt="Expandir" title="Expandir">
                     <i class="icon-circle-arrow-down"></i>
                 </button>
             </div>
+            <div class="clearfix"></div>
         </div>
         {{for story in stories[sprint.id]:}}
-        <div class="widget-content">
+        <div class="sprint_content">
             <div class="story_header">
                 <div class="pull-left">
                     <h5>{{=story.title}}</h5>
@@ -75,36 +76,45 @@
             <div class="story_container">
                 {{for n,df in enumerate(definition_ready[story.id]):}}
                 <div class="story_content">
-                    <div class="list_definition_ready">
-                        <div class="definition_ready">
-                            <p>{{=definition_ready[story.id][n].title}}</p>
-                        </div>
-                        <div class="tasks">
-                            {{for task in tasks[definition_ready[story.id][n].id]:}}
-                            <a href="#" class="card-modal" data-pk='{{=task["id"]}}' onclick="">
-                                <p>
-                                    {{ for member in team_members: }}
-                                        {{ if task["owner_task"] == member.sharing.person_id: }}
-                                            <img class="user_card " src='{{=Gravatar(member.user_relationship.auth_user_id.email).thumb}}' alt='{{=member.sharing.person_id.name}} - {{=member.sharing.role_id.name}}' title='{{=member.sharing.person_id.name}} - {{=member.sharing.role_id.name}}' data-owner="true">
-                                        {{pass}}
+                    <div class="definition_ready">
+                        {{if definition_ready[story.id][n] == definition_ready[story.id][0]:}}
+                        <h5 class="definition_ready_label">{{=T("Definitions of Ready")}}</h5>
+                        {{pass}}
+                        <p>{{=definition_ready[story.id][n].title}}</p>
+                    </div>
+                    <div class="tasks">
+                        {{for task in tasks[definition_ready[story.id][n].id]:}}
+
+                        <ul class="task_container card-modal">
+                          <li class="task">
+                            <div class="avatar_container">
+                                {{ for member in team_members: }}
+                                    {{ if task["owner_task"] == member.sharing.person_id: }}
+                                        <img class="user_card" src='{{=Gravatar(member.user_relationship.auth_user_id.email).thumb}}' alt='{{=member.sharing.person_id.name}} - {{=member.sharing.role_id.name}}' title='{{=member.sharing.person_id.name}} - {{=member.sharing.role_id.name}}' data-owner="true">
                                     {{pass}}
-                                    {{=task["title"]}}
+                                {{pass}}
+                            </div>
+                            <div class="card_container">
+                                <a href="#" class="task_item" data-pk='{{=task["id"]}}'>{{=task["title"]}}</a>
+                                <div class="icons_card">
                                     {{if len(card_comments[task["id"]]) > 0:}}
                                         <span class="comment"><i class="icon-comment"><span class="number_comment">{{ =g_format_number( len(card_comments[task["id"]]) ) }}</span></i></span>
                                     {{pass}}
-                                </p>
-                            </a>
-                            {{pass}}
-                        </div>
-                    </div> <!-- /list_definition_ready -->
-                    <hr>
+                                </div>
+                            </div>
+                            <div class="clearfix"></div>
+                          </li>
+                        </ul>
+
+                        {{pass}}
+                    </div>
                 </div> <!-- /story_content -->
                 {{pass}}
             </div> <!-- /story_container -->
 
-        </div> <!-- /widget-content -->
+        </div> <!-- /sprint_content -->
         {{pass}}
-    </div> <!-- /widget-box -->
+    </div> <!-- /sprint_container -->
     {{pass}}
 </div> <!-- /container-fluid -->
 
