--- a/views/default/product_backlog.html
+++ b/views/default/product_backlog.html
@@ -16,6 +16,7 @@
             create_or_update_itens : '{{=URL(r=request,f="call",args=["json","create_or_update_itens"])}}',
             removeBacklogItens : '{{=URL("remove_backlog_itens")}}',
             changeStories : '{{=URL("change_stories")}}',
+            ajax_upload : '{{=URL(r=request,f="call",args=["json","ajax_upload"])}}',
         },
         info = {
             project_id : '{{=project.id}}',
