--- a/static/css/tela-login-registro.css
+++ b/static/css/tela-login-registro.css
@@ -27,7 +27,7 @@ input[type="text"] , input[type="email"] , input[type="password"]{
 .bloco_grande {
 	width: 309px;
 	box-shadow: 0px 0px 50px black;
-	margin-top: 20px;
+	margin-top: 4em;
 	float: right;
 }
 .menu{
