--- a/views/default/index.html
+++ b/views/default/index.html
@@ -128,7 +128,9 @@
   </div>
 
     <footer>
-      <!--<a href='http://agenciax4.com.br' id="agenciax4-logo" alt="AgenciaX4 Logo" title="AgenciaX4 Logo"><img src='{{=URL("static","img/agenciax4-signature.png")}}' alt="AgenciaX4 Logo" title="AgenciaX4 Logo"></a>-->
+      <p>
+        Copyleft © 2015 Scrumforme. Desenvolvido por <a href="http://x4start.com" target="_blank">X4 Start</a> & <a href="http://kolaborativa.com" target="_blank">Kolaborativa</a>
+      </p>
     </footer>
 
 <script src='{{=URL("static","js/bootstrap-custom.min.js")}}'></script>
